[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peak_detection"
version = "0.1.0"
description = "Algorithm to identify extreme atmospheric moistening and drying based on retrieved IWV from ground-based microwave radiometer"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Christian Buhren", email = "christian.buhren@uni-koeln.de"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy",
    "xarray",
    "pandas",
    "netCDF4",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Repository = "https://github.com/username/peak_detection"

[tool.setuptools]
py-modules = ["define_event"]
